--- a/rapport_stage.tex
+++ b/rapport_stage.tex
@@ -16,7 +16,7 @@
 \usepackage{listings} % Code
 
 
-\graphicspath{ {./images/} }
+\graphicspath{ {./src/images/} }
 
 % \UseRawInputEncoding
 
@@ -33,40 +33,7 @@
 \begin{document}
 
 % Intro             ===============================
-\begin{titlepage}
-    \begin{center}
-        \vspace*{1cm}
-
-        \textbf{\Huge{ISYEB}}
-
-        \vspace{0.5cm}
-
-        \textbf{Rapport de stage de 3ème année de Licence Informatique} 
-
-        \vspace{0.5cm}
-
-        \small{\textit{Sujet : Réalisation d'un dispositif de capture vidéo pour l’acquisition de données dans le cadre d’une manipulation en biologie.}}
-
-        \vspace{1.5cm}
-
-        \textbf{Aymerick LAURETTA-PERONNE} \\
-
-        \vfill
-
-        % Rapport de stage de 3ème année de Licence Informatique \\
-
-        \vspace{0.8cm}
-
-        \includegraphics[]{logo.png}
-        
-        \textbf{Informatique} \\
-        \textbf{Université des Antilles} \\
-        \textbf{Région de la Guadeloupe} \\
-        \vspace{0.5cm}
-        \textbf{\today {}}
-         
-    \end{center}
-\end{titlepage}
+\include{./src/tex/cover_page.tex}
 % Intro             ===============================
 
 \dominitoc
