--- a/src/tex/cover_page.tex
+++ b/src/tex/cover_page.tex
@@ -2,13 +2,18 @@
     \begin{center}
         \vspace*{1cm}
 
+        \includegraphics[scale=0.50]{logo_ufr_sen.png}
+        \hspace{2cm}
+
+        \vspace{0.5cm}
+
         \textbf{\Huge{ISYEB}}
 
         \vspace{0.5cm}
 
         \textbf{Rapport de stage de 3ème année de Licence Informatique} 
-
-        \vspace{0.5cm}
+        
+        \vspace{0.3cm}
 
         \small{\textit{Sujet : Réalisation d'un dispositif de capture vidéo pour l’acquisition de données dans le cadre d’une manipulation en biologie.}}
 
@@ -17,16 +22,33 @@
         \textbf{Aymerick LAURETTA-PERONNE} \\
 
         \vfill
+                
+		{\large Organisme d'accueil: \textsl{Université des Antilles Département de Biologie}} \\[0.1cm]
+        \small{\textit{Équipe Biologie de la Mangrovee}} \\[1.5cm]
 
-        % Rapport de stage de 3ème année de Licence Informatique \\
-
-        \vspace{0.8cm}
-
-        \includegraphics[]{logo.png}
+		\begin{minipage}{0.7\textwidth}
+			\begin{flushleft}
+				Enseignant référent: \\
+				\hspace{0.2cm} Wilfried \textsc{SEGRETIER}
+			\end{flushleft}
+		\end{minipage}
         
-        \textbf{Informatique} \\
+		\vspace{-0.85cm}
+		\hspace{9cm}
+		\begin{minipage}{0.3\textwidth}
+			\begin{flushleft}
+				Tuteur de stage: \\
+				\hspace{0.2cm} Manuel \textsc{CLERGUE}
+
+				Co-tuteur: \\
+				\hspace{0.2cm} Olivier \textsc{GROS}
+			\end{flushleft}
+		\end{minipage} \\[3cm]
+        
         \textbf{Université des Antilles} \\
-        \textbf{Région de la Guadeloupe} \\
+        \textbf{Département de Biologie} \\
+        \textbf{Équipe Biologie de la Mangrovee} \\
+        \textbf{Laboratoire de Biologie Marine} \\
         \vspace{0.5cm}
         \textbf{\today {}}
          
