--- a/src/tex/cover_page.tex
+++ b/src/tex/cover_page.tex
@@ -1,6 +1,6 @@
 \begin{titlepage}
     \begin{center}
-        \vspace*{1cm}
+        \vspace*{0.5cm}
 
         \includegraphics[scale=0.50]{logo_ufr_sen.png}
         \hspace{2cm}
@@ -11,14 +11,18 @@
 
         \vspace{0.5cm}
 
+        \rule{\linewidth}{0.5mm}
         \textbf{Rapport de stage de 3ème année de Licence Informatique} 
         
-        \vspace{0.3cm}
+        \vspace{0.2cm}
 
         \small{\textit{Sujet : Réalisation d'un dispositif de capture vidéo pour l’acquisition de données dans le cadre d’une manipulation en biologie.}}
+        \rule{\linewidth}{0.5mm}
 
         \vspace{1.5cm}
 
+        \textbf{Nom :} \textit{M. BOULANGER} \\
+    
         \textbf{Aymerick LAURETTA-PERONNE} \\
 
         \vfill
@@ -44,6 +48,9 @@
 				\hspace{0.2cm} Olivier \textsc{GROS}
 			\end{flushleft}
 		\end{minipage} \\[3cm]
+
+        \rule{\linewidth}{0.5mm}
+        \vfill
         
         \textbf{Université des Antilles} \\
         \textbf{Département de Biologie} \\
