--- a/rapport_stage.tex
+++ b/rapport_stage.tex
@@ -1,26 +1,21 @@
 \documentclass[a4paper, 11pt]{report}
 
 \usepackage[T1]{fontenc} % Times New Roman
-% \usepackage{times} % Times New Roman
 \usepackage{lmodern} % sans serif
 \usepackage[utf8]{inputenc} % UTF-8
 \usepackage[french]{babel} % French 
-
 \usepackage{minitoc} % Table of contents
 \usepackage{geometry} % Page size
 \usepackage{ragged2e} % Ragged right
 \usepackage{fancyhdr} % Header
 \usepackage{graphicx} % Images
 \usepackage[scaled]{helvet} 
-	
 \usepackage{listings} % Code
-
 
 \graphicspath{ {./src/images/} }
 
-% \UseRawInputEncoding
-
 \justifying
+
 \setlength{\headheight}{0.5cm}
 \setlength{\headsep}{0.5cm}
 
@@ -68,7 +63,18 @@
 
 \chapter{Présentation de la problématique (sujet du stage)}
 \minitoc
-    \section{Projet : Montage du dispositif de capture vidéo}
+
+    \section{Description, résultats attendus et objectifs}
+    \section{Etude du besoin}
+        \subsection{Contexte}
+        \subsection{Analyse du besoin}
+        \subsection{Définition des besoins}
+        
+    \section{Choix des technologies}
+        \subsection{Choix du langage Python}
+        \subsection{Choix l'API PiCamera}
+        \subsection{Choix de la bibliothèque Tkinter}
+        \section{Projet : Montage du dispositif de capture vidéo}
       
         \subsection{Objectifs}
             \begin{itemize}
