--- a/src/tex/chapter_1.tex
+++ b/src/tex/chapter_1.tex
@@ -1,3 +1,8 @@
 \chapter{Introduction}
-\minitoc
-    \section{Présentation}
+\minitoc    
+    Dans le cadre de ma dernière année de licence informatique à l'université des antilles de Guadeloupe, je dois effectuer un stage d'une durée de 24 jours. Ce stage vise à cloturer mon cursus universitaire.
+    Il me permet de mettre en pratique mes acquis en informatique et de me familiariser avec la vie professionnelle.
+
+    \vspace{0.5cm}
+
+    Dans ce rapport de stage, je vais décrire le contexte de l'entreprise, la problématique, les objectifs, les étapes de réalisation du logiciel de capture vidéo.
