--- a/rapport_stage.tex
+++ b/rapport_stage.tex
@@ -1,9 +1,11 @@
-\documentclass[a4paper, 12pt]{report}
+\documentclass[a4paper, 12pt, french]{report}
 
 \usepackage[utf8]{inputenc} % UTF-8
-\usepackage[french]{babel} % French 
+\usepackage{babel} % French 
 \usepackage[T1]{fontenc} % Times New Roman
-
+% \usepackage[latin1]{inputenc} % ISO 8859-1
+\usepackage{lmodern} % modern fonts
+\usepackage[babel=true]{csquotes} % French quotes
 \usepackage{minitoc} % Table of contents
 \usepackage{geometry} % Page size
 \usepackage{ragged2e} % Ragged right
