--- a/src/tex/chapter_2.tex
+++ b/src/tex/chapter_2.tex
@@ -3,21 +3,18 @@
 
     \section{Présentation de l'entreprise}
     L’université des Antilles est une université pluridisciplinaire implantée sur deux régions, Guadeloupe et Martinique née de la scission de l’université des Antilles et de la Guyane (UAG) en 2014, en université de Guyane, d’une part et en université des Antilles, d’autre part.
-
     Elle comprend l'une des 204 écoles d'ingénieurs françaises accréditées au 1er septembre 2020 à délivrer un diplôme d'ingénieur.
 
     \section{Présentation de l'UFR SEN}
     L’Unité de Formation et de Recherche (UFR) en Sciences Exactes et Naturelles (SEN), communément appelée UFR SEN, compte près de 1 800 étudiants, 110 enseignants et enseignants chercheurs, 32 personnels BIATSS, et a la particularité d’être la composante de l’Université des Antilles qui porte le plus de diplômes de formation (15) et de structures de recherche (9 sur les 25 que compte toute l’université). 
-    
     Ses domaines de recherche et de formation couvrent les six pôles thématiques de l’Université des Antilles : Risques et Énergies, Numérique, Mer et Océan, Biodiversité en milieu tropical insulaire, Santé insulaire en environnement tropical, Dynamique des sociétés et territoires Caraïbes.
-    
     Les équipes de recherche portent à elles seules près de 70\% de l’ensemble des projets de recherche réalisé à l’Université des Antilles.
-    
     Des impacts environnementaux des sargasses, à l’étude de la durabilité des matériaux, en passant par les risques naturels majeurs et les transitions énergétiques, climatiques et écologiques, la Faculté des Sciences est porteuse de projets innovants. 
+
+    \vspace{2cm}
 
     \section{Présentation de la biologie de la mangrove}
     L'équipe " Biologie de la Mangrove " fait partie intégrante de l'UMR 7205 MNHN CNRS-Sorbonne Université-UA "Institut de Systématique, Evolution, Biodiversité" dirigée par Philippe Grandcolas (organigramme de l'UMR).
-
     Elle représente l'une des 19 équipes constituant actuellement cette UMR qui est répartie sur 2 sites (Paris et Guadeloupe). L'équipe " Biologie de la Mangrove " est composée exclusivement de personnels de l'Université des Antilles et est localisée en Guadeloupe sur le campus de Fouillole.
-
-    Nous avons intégré l'UMR 7205 ISYEB en janvier 2019 en proposant d'étudier la biologie et les adaptations évolutives (par le biais de la symbiose essentiellement) de modèles littoraux côtiers tropicaux évoluant au sein d'écosystèmes extrêmes (forte teneurs en composés soufrés réduits comme la mangrove et les herbiers à phanérogames marines) faciles d'accès. Actuellement, nous travaillons sur 2 thématiques principales.
+    
+    Nous avons intégré l'UMR 7205 ISYEB en janvier 2019 en proposant d'étudier la biologie et les adaptations évolutives (par le biais de la symbiose essentiellement) de modèles littoraux côtiers tropicaux évoluant au sein d'écosystèmes extrêmes (forte teneurs en composés soufrés réduits comme la mangrove et les herbiers à phanérogames marines) faciles d'accès.
