--- a/src/tex/cover_page.tex
+++ b/src/tex/cover_page.tex
@@ -1,32 +1,30 @@
 \begin{titlepage}
     \begin{center}
-        \vspace*{0.5cm}
+        % \vspace*{0.5cm}
 
-        \includegraphics[scale=0.50]{logo_ufr_sen.png}
+        \includegraphics[scale=0.30]{logo_ufr_sen.png}
+        \hspace{2cm}
+        \includegraphics[scale=0.30]{logo_isyeb} \\[2cm]
         \hspace{2cm}
 
-        \vspace{0.5cm}
-
-        \textbf{\Huge{ISYEB}}
+        \textbf{\large{Aymerick LAURETTA-PERONNE}} \\
 
         \vspace{0.5cm}
+                
+		\textsl{\large{Université des Antilles}} \\[0.1cm]
+        \small{\textit{Équipe Biologie de la Mangrovee}} \\[1cm]
+
+        \vspace{1.5cm}
 
         \rule{\linewidth}{0.5mm}
         \textbf{Rapport de stage de 3ème année de Licence Informatique} 
         
-        \vspace{0.2cm}
+        \vspace{0.5cm}
 
-        \small{\textit{Sujet : Réalisation d'un dispositif de capture vidéo pour l’acquisition de données dans le cadre d’une manipulation en biologie.}}
+        \small{\textit{Réalisation d'un dispositif de capture vidéo pour l’acquisition de données dans le cadre d’une manipulation en biologie.}}
         \rule{\linewidth}{0.5mm}
 
-        \vspace{2cm}
-    
-        \textbf{Aymerick LAURETTA-PERONNE} \\
-
-        \vfill
-                
-		{\large Organisme d'accueil: \textsl{Université des Antilles Département de Biologie}} \\[0.1cm]
-        \small{\textit{Équipe Biologie de la Mangrovee}} \\[1cm]
+        \vspace{2.5cm}
     
 		\begin{minipage}{0.7\textwidth}
 			\begin{flushleft}
@@ -49,12 +47,6 @@
 
         \rule{\linewidth}{0.5mm}
         \vfill
-        
-        \textbf{Université des Antilles} \\
-        \textbf{Département de Biologie} \\
-        \textbf{Équipe Biologie de la Mangrovee} \\
-        \textbf{Laboratoire de Biologie Marine} \\
-        \vspace{0.5cm}
         \textbf{\today {}}
          
     \end{center}
