--- a/src/tex/chapter_4.tex
+++ b/src/tex/chapter_4.tex
@@ -22,29 +22,19 @@
     Afin de déterminer leur préférence, il est nécessaire d'avoir un dispositif adéquat pour leur permettre de se déplacer.
     Ainsi qu'un dispositif de capture vidéo pour l'acquisition de données.
 
-    \vspace{0.1cm}
+    \vspace{1.6cm}
 
     \begin{flushleft}
-        Le tout étant fait de façon manuelle, les biologistes accrochaient une GoPro au dessus du bac et ensuite devaient la rettirer afin de pouvoir récupérer les données enregistrées. Ce dispositif était très simple à utiliser et leur permettait de réaliser des captures vidéo mais ils leur fallait placé le bac dans le champ de vision de la GoPro a chaque fois qu'ils voulaient faire une capture.        
-    \end{flushleft}
+        Le tout étant fait de façon manuelle, les biologistes accrochaient une GoPro au dessus du bac et ensuite devaient la rettirer afin de pouvoir récupérer les données enregistrées. Ce dispositif était très simple à utiliser et leur permettait de réaliser des captures vidéo mais ils leur fallait placé le bac dans le champ de vision de la GoPro a chaque fois qu'ils voulaient faire une capture.\\[0.2cm]
+        
+        Il fallait aussi que la GoPro soit connecté à un ordinateur afin de pouvoir récupérer les données.\\[0.2cm]
 
-    \vspace{0.1cm}
+        Ajouter à cela le démarrage et l'arrêt de l'enregistrement de manière manuelle entrainant régulièrement le déplacement du bac (avec les mouvements). La disposition de la GoPro ne permettait de bien voir la prévisualisation de la capture vidéo.\\[0.2cm]
 
-    \begin{flushleft}
-        Il fallait aussi que la GoPro soit connecté à un ordinateur afin de pouvoir récupérer les données.
-    \end{flushleft}
-
-    \vspace{0.1cm}
-
-    \begin{flushleft}
-        Ajouter à cela le démarrage et l'arrêt de l'enregistrement de manière manuelle entrainant régulièrement le déplacement du bac (avec les mouvements). La disposition de la GoPro ne permettait de bien voir la prévisualisation de la capture vidéo.
-    \end{flushleft}
-
-    \vspace{0.1cm}
-
-    \begin{flushleft}
         Les biologistes ont donc décidé d'améliorer leur dispositif afin de pouvoir réaliser l'expérience de manière plus pratique.    
     \end{flushleft}
+
+    \vspace{0.1cm}
 
     % Pourquoi : Avant c'était fait à la main et c'est pas très efficace.
 
@@ -54,15 +44,11 @@
     \vspace{0.1cm}
 
     \begin{flushleft}
-        Le dispositif sera installé sur une potence au-dessus du bac et restera fixe en permanence cela limitera les divers déplacements.                
-    \end{flushleft}
-
-    \begin{flushleft}
-        Avec un écran nous pourront interagir avec l'application pour réaliser des captures vidéos.        
-    \end{flushleft}
-
-    \begin{flushleft}
-        Le but de cette application est de permettre aux biologistes de réaliser des captures vidéo enregistrées directement sur la carte SD de la Raspberry Pi.\\[0.5cm]
+        Le dispositif sera installé sur une potence au-dessus du bac et restera fixe en permanence cela limitera les divers déplacements.\\[0.2cm]                
+    
+        Avec un écran nous pourront interagir avec l'application pour réaliser des captures vidéos.\\[0.2cm]
+    
+        Le but de cette application est de permettre aux biologistes de réaliser des captures vidéo enregistrées directement sur la carte SD de la Raspberry Pi.\\[0.2cm]
 
         Et avec un dispositif d'acquisiton de données de manière permanentex.
     \end{flushleft}
