--- a/src/tex/chapter_4.tex
+++ b/src/tex/chapter_4.tex
@@ -7,14 +7,24 @@
     Les \textbf{Gerridés} sont une famille d'insectes de l'ordre des Hémiptères et du sous-ordre des Hétéroptères c'est-à-dire des punaises.
     \begin{figure}[h]
         \centering
-        \includegraphics[scale=0.2]{gerrides.jpg}
+        \includegraphics[scale=0.15]{gerrides.jpg}
         \caption{Gérridés}        
     \end{figure}
 
     \vspace{0.1cm}
 
     \begin{flushleft}
-        Les membres de cette famille sont communément appelés araignées d’eau, mais ce sont des insectes, on ne peut donc pas parler d'araignées. Cette appellation vient sans doute du fait de leurs longues pattes. Leur capacité à se déplacer sur l'eau leur vaut aussi le nom de patineurs de l'eau.        
+        Les membres de cette famille sont communément appelés araignées d’eau, mais ce sont des insectes, on ne peut donc pas parler d'araignées. Cette appellation vient sans doute du fait de leurs longues pattes. Leur capacité à se déplacer sur l'eau leur vaut aussi le nom de patineurs de l'eau.\\[0.2cm]
+        
+        J'ai eu l'occasion de partir à la recherche de Gérridés dans la Mangrove de la Guadeloupe et d'en attraper a l'épuisette.
+
+        \begin{figure}[h]
+            \centering
+            \includegraphics[scale=0.05]{mangrove.jpeg}
+            \caption{Mangrove de la Guadeloupe}
+        \end{figure}
+
+
     \end{flushleft}
 
     \vspace{0.5cm}
@@ -31,7 +41,10 @@
 
         Ajouter à cela le démarrage et l'arrêt de l'enregistrement de manière manuelle entrainant régulièrement le déplacement du bac (avec les mouvements). La disposition de la GoPro ne permettait de bien voir la prévisualisation de la capture vidéo.\\[0.2cm]
 
-        Les biologistes ont donc décidé d'améliorer leur dispositif afin de pouvoir réaliser l'expérience de manière plus pratique.    
+        Les biologistes ont donc décidé d'améliorer leur dispositif afin de pouvoir réaliser l'expérience de manière plus pratique.\\[0.2cm]
+
+        Ce qui nous peremets d'enchainer sur l'objectif qui en découlent.
+
     \end{flushleft}
 
     \vspace{0.1cm}
@@ -46,9 +59,13 @@
     \begin{flushleft}
         Le dispositif sera installé sur une potence au-dessus du bac et restera fixe en permanence cela limitera les divers déplacements.\\[0.2cm]                
     
-        Avec un écran nous pourront interagir avec l'application pour réaliser des captures vidéos.\\[0.2cm]
+        Avec un écran nous pourront interagir avec l'application permettant de démarrer et d'arrêter un enregistrement.\\[0.2cm]
+
+        Ainsi avec l'application nous pourront avoir une prévisualisation de la capture vidéo.\\[0.2cm]
     
         Le but de cette application est de permettre aux biologistes de réaliser des captures vidéo enregistrées directement sur la carte SD de la Raspberry Pi.\\[0.2cm]
 
-        Et avec un dispositif d'acquisiton de données de manière permanentex.
+        Il sera également possible de visualiser les capture vidéos enregistrées sur la carte SD du Raspberry Pi et si besoin de les récupérer à l'aide d'une clé USB ou un disque dur externe sans problème.\\[0.2cm]
+
+        Voyons maintenant comment faire.
     \end{flushleft}
