--- a/rapport_stage.tex
+++ b/rapport_stage.tex
@@ -14,7 +14,7 @@
 \usepackage[scaled]{helvet} 
 \usepackage{listings} % Code
 \usepackage{amsthm}
-\usepackage{hyperref}
+% \usepackage{hyperref}
 
 
 \newtheorem{definition}{Définition}
@@ -50,24 +50,24 @@
 \include{./src/tex/chapter_1.tex}
 % Introduction             ===============================
 
-% Définition             ===============================
-\include{./src/tex/definition.tex}
-% Définition             ===============================
-
 % Environnement             ===============================
 \include{./src/tex/chapter_2.tex}
 % Environnement             ===============================
     
 % Présentation de la problématique (sujet du stage)          ===============================
-\include{./src/tex/chapter_4.tex}
+\include{./src/tex/chapter_3.tex}
 % Présentation de la problématique (sujet du stage)          ===============================
 
 % Travail réalisé          ===============================
-\include{./src/tex/chapter_5.tex} 
+\include{./src/tex/chapter_4.tex} 
 % Travail réalisé          ===============================
 
 % Conclusion          ===============================
-\include{./src/tex/chapter_6.tex}
+\include{./src/tex/chapter_5.tex}
 % Conclusion          ===============================
+
+% Définition             ===============================
+\include{./src/tex/definition.tex}
+% Définition             ===============================
 
 \end{document}
