--- a/src/tex/chapter_2.tex
+++ b/src/tex/chapter_2.tex
@@ -27,3 +27,13 @@
     \vspace{0.5cm}
     
     L'équipe de la Biologie de la Mangrove intégré l'UMR 7205 ISYEB en janvier 2019 en proposant d'étudier la biologie et les adaptations évolutives (par le biais de la symbiose essentiellement) de modèles littoraux côtiers tropicaux évoluant au sein d'écosystèmes extrêmes (forte teneurs en composés soufrés réduits comme la mangrove et les herbiers à phanérogames marines) faciles d'accès.
+
+    \section{Ressources fournies}
+    Plusieurs ressources m'ont été fournies dans le cadre de mon stage.
+    Dans un premier temps, j'ai reçu le matériel permettant l'acquisition vidéo qui sera abordé dans la section 4.2.
+    Une connexion filaire au réseau de l'Université des Antilles a été fournie pour me permettant d'installer des mise à jour de logiciels.
+
+    \section{Contraintes particulières}
+    Le matériel ayant été commandé avant le début de mon stage est ma contrainte principale.
+    De ce fait, j'ai du faire preuve d'adaptation et faire au mieux avec les ressources fournies.
+    N'ayant pas le contrôle sur le matériel, afin qu'il soit purement adapté aux besoins des biologistes.
