--- a/src/tex/definition.tex
+++ b/src/tex/definition.tex
@@ -1,7 +1,8 @@
 \begin{definition}
     \newcommand{\lab}[1]{(\ref{#1})}
     CSI : Camera Serial Interface (signifiant en anglais interface série pour caméra, CSI) est un standard d'interface électronique entre une caméra (un capteur ou une source vidéo) et un microprocesseur.
-    \label{def:csi}
+    % \label{def:csi}
+
 \end{definition}
 
 
