--- a/src/tex/chapter_3.tex
+++ b/src/tex/chapter_3.tex
@@ -1,13 +1,72 @@
-\chapter{Conception et réalisation de l'application}
-\minitoc 
+\chapter{Présentation de la problématique}
+    \section{Présentation du sujet}
+    Projet avec le laboratoire de \textit{Biologie} de l'\textit{Université des Antilles}, le projet concerne en l'analyse de déplacement de \textbf{Gerridés} afin de déterminer leur préférence sur des zones marquées par des odeurs, en environnement contrôlé.
 
-    \section{Description, résultats attendus et objectifs}
-    \section{Etude du besoin}
-        \subsection{Contexte}
-        \subsection{Analyse du besoin}
-        \subsection{Définition des besoins}
+    % \vspace{0.5cm}
+
+    \section{Présentation de l'aspect Biologie}
+    Les \textbf{Gerridés} sont une famille d'insectes de l'ordre des Hémiptères et du sous-ordre des Hétéroptères c'est-à-dire des punaises.
+    \begin{figure}[ht]
+        \centering
+        \includegraphics[scale=0.15]{gerrides.jpg}
+        \caption{Gérridés}        
+    \end{figure}
+
+    \vspace{0.1cm}
+
+    \begin{flushleft}
+        Les membres de cette famille sont communément appelés araignées d’eau, mais ce sont des insectes, on ne peut donc pas parler d'araignées. Cette appellation vient sans doute du fait de leurs longues pattes. Leur capacité à se déplacer sur l'eau leur vaut aussi le nom de patineurs de l'eau.\\[0.1cm]
         
-    \section{Choix des technologies}
-        \subsection{Choix du langage Python}
-        \subsection{Choix l'API PiCamera}
-        \subsection{Choix de la bibliothèque Tkinter}
+        J'ai eu l'occasion de partir à la recherche de Gérridés dans la Mangrove de la Guadeloupe et d'en attraper a l'épuisette (voir Figure 3.2).
+
+        \begin{figure}[ht]
+            \centering
+            \includegraphics[scale=0.05]{mangrove.jpeg}
+            \caption{Mangrove de la Guadeloupe}
+        \end{figure}
+
+
+    \end{flushleft}
+
+    \vspace{0.2cm}
+
+    Afin de déterminer leur préférence, il est nécessaire d'avoir un dispositif adéquat de capture vidéo pour l'acquisition de données.
+
+    \vspace{0.5cm}
+
+    \begin{flushleft}
+        Le tout étant fait de façon manuelle, les biologistes accrochaient une GoPro au dessus du bac et ensuite devaient la rettirer afin de pouvoir récupérer les données enregistrées. Ce dispositif était fonctionnel et leur permettait de réaliser des captures vidéo mais ils leur fallait placé le bac dans le champ de vision de la GoPro a chaque fois qu'ils voulaient faire une capture.\\[0.2cm]
+        
+        Il fallait aussi que la GoPro soit connecté à un ordinateur afin de pouvoir récupérer les données.\\[0.2cm]
+
+        Ajouter à cela le démarrage et l'arrêt de l'enregistrement de manière manuelle entrainant régulièrement le déplacement du bac (avec les mouvements). La disposition de la GoPro ne permettait de bien voir la prévisualisation de la capture vidéo.\\[0.2cm]
+
+        Les biologistes ont donc décidé d'améliorer leur dispositif afin de pouvoir réaliser l'expérience de manière plus pratique.\\[0.2cm]
+
+        Ce qui nous peremets d'enchainer sur l'objectif qui en découlent.
+
+    \end{flushleft}
+
+    \vspace{0.1cm}
+
+    % Pourquoi : Avant c'était fait à la main et c'est pas très efficace.
+
+    \section{Objectifs}
+    % Voir pour mettre cette partie dans 'Mon Travail' 4.1.
+    L'objectifs du stage est de réaliser l'installation et de configurer un dispositif de capture vidéo réalisé par un \textit{Raspberry Pi} ainsi que de développer une application conviviale pour la gestion des vidéos.
+
+    \vspace{0.1cm}
+
+    \begin{flushleft}
+        Le dispositif sera installé sur une potence au-dessus du bac et restera fixe en permanence cela limitera les divers déplacements.\\[0.2cm]                
+    
+        Avec un écran nous pourront interagir avec l'application permettant de démarrer et d'arrêter un enregistrement.\\[0.2cm]
+
+        Ainsi avec l'application nous pourront avoir une prévisualisation de la capture vidéo.\\[0.2cm]
+    
+        Le but de cette application est de permettre aux biologistes de réaliser des captures vidéo enregistrées directement sur la carte SD de la Raspberry Pi.\\[0.2cm]
+
+        Il sera également possible de visualiser les capture vidéos enregistrées sur la carte SD du Raspberry Pi et si besoin de les récupérer à l'aide d'une clé USB ou un disque dur externe sans problème.\\[0.2cm]
+
+        Voyons maintenant comment faire.
+    \end{flushleft}
