--- a/src/tex/chapter_4.tex
+++ b/src/tex/chapter_4.tex
@@ -1,71 +1,49 @@
-\chapter{Présentation de la problématique}
-    \section{Présentation du sujet}
-    Projet avec le laboratoire de \textit{Biologie} de l'\textit{Université des Antilles}, le projet concerne en l'analyse de déplacement de \textbf{Gerridés} afin de déterminer leur préférence sur des zones marquées par des odeurs, en environnement contrôlé.
-
-    \vspace{0.5cm}
-
-    Les \textbf{Gerridés} sont une famille d'insectes de l'ordre des Hémiptères et du sous-ordre des Hétéroptères c'est-à-dire des punaises.
-    \begin{figure}[h]
-        \centering
-        \includegraphics[scale=0.15]{gerrides.jpg}
-        \caption{Gérridés}        
-    \end{figure}
-
-    \vspace{0.1cm}
-
+\chapter{Travail réalisé}
+    \section{Mon travail}
+    % Présentation du travail a effectuer sur le projet.
     \begin{flushleft}
-        Les membres de cette famille sont communément appelés araignées d’eau, mais ce sont des insectes, on ne peut donc pas parler d'araignées. Cette appellation vient sans doute du fait de leurs longues pattes. Leur capacité à se déplacer sur l'eau leur vaut aussi le nom de patineurs de l'eau.\\[0.2cm]
-        
-        J'ai eu l'occasion de partir à la recherche de Gérridés dans la Mangrove de la Guadeloupe et d'en attraper a l'épuisette.
+        Avant de commencer, je vous présente mon travail sur le sujet du stage.
 
+        \vspace{0.2cm}
+    
+        Dans un premier temps, il faudra installer le système Raspbian.
+        Une fois l'installation faire, il faudra configurer le système.
+        Avant de commencer l'application, il me faudra faire quelques tests afin de vérifier le bon fonctionnement.
+        Une fois cela terminé, il me faut vérifier que la caméra fonctionne correctement.    
+    \end{flushleft}
+
+    \section{Présentation du Matérriel}
+        \subsection{Raspberry Pi}
+        Le \textit{Raspberry Pi} est un ordinateur portable de petite taille, doté d'un processeur ARM et d'un système d'exploitation Linux.
         \begin{figure}[h]
             \centering
-            \includegraphics[scale=0.05]{mangrove.jpeg}
-            \caption{Mangrove de la Guadeloupe}
+            \includegraphics[scale=0.2]{rasp.jpg}
+            \caption{Raspberry Pi 4}
         \end{figure}
 
+        \subsection{Ecran LCD (Raspberry Pi) tailles}
+        Avec le \textit{Raspberry Pi} un écran LCD de 7 pouces permettant d'interagir avec l'ordinateur grâce à son écran tactile. 
+        \begin{figure}[h]
+            \centering
+            \includegraphics[scale=0.05]{ecran7p.jpg} 
+            \caption{Ecran LCD de 7 pouces}
+        \end{figure}
 
-    \end{flushleft}
+        \vspace{1cm}
 
-    \vspace{0.5cm}
-
-    Afin de déterminer leur préférence, il est nécessaire d'avoir un dispositif adéquat pour leur permettre de se déplacer.
-    Ainsi qu'un dispositif de capture vidéo pour l'acquisition de données.
-
-    \vspace{1.6cm}
-
-    \begin{flushleft}
-        Le tout étant fait de façon manuelle, les biologistes accrochaient une GoPro au dessus du bac et ensuite devaient la rettirer afin de pouvoir récupérer les données enregistrées. Ce dispositif était très simple à utiliser et leur permettait de réaliser des captures vidéo mais ils leur fallait placé le bac dans le champ de vision de la GoPro a chaque fois qu'ils voulaient faire une capture.\\[0.2cm]
+        \subsection{Module de capture vidéo (Raspberry Pi) V2}
+        Le module de capture vidéo (Raspberry Pi) V2 est un module de captation vidéo qui permet de capturer des images et des vidéos.
+        \begin{figure}[h]
+            \centering        
+            \includegraphics[scale=0.1]{module_cam.jpg}
+            \caption{Module de capture vidéo (Raspberry Pi) V2}
+        \end{figure}
         
-        Il fallait aussi que la GoPro soit connecté à un ordinateur afin de pouvoir récupérer les données.\\[0.2cm]
-
-        Ajouter à cela le démarrage et l'arrêt de l'enregistrement de manière manuelle entrainant régulièrement le déplacement du bac (avec les mouvements). La disposition de la GoPro ne permettait de bien voir la prévisualisation de la capture vidéo.\\[0.2cm]
-
-        Les biologistes ont donc décidé d'améliorer leur dispositif afin de pouvoir réaliser l'expérience de manière plus pratique.\\[0.2cm]
-
-        Ce qui nous peremets d'enchainer sur l'objectif qui en découlent.
-
-    \end{flushleft}
-
-    \vspace{0.1cm}
-
-    % Pourquoi : Avant c'était fait à la main et c'est pas très efficace.
-
-    \section{Objectifs}
-    L'objectifs du stage est de réaliser l'installation et de configurer un dispositif de capture vidéo réalisé par un \textit{Raspberry Pi} ainsi que de développer une application conviviale pour la gestion des vidéos.
-
-    \vspace{0.1cm}
-
-    \begin{flushleft}
-        Le dispositif sera installé sur une potence au-dessus du bac et restera fixe en permanence cela limitera les divers déplacements.\\[0.2cm]                
+    \section{Montage, Installation et Configuration}
+        \subsection{Installation du matériel}  
+        
     
-        Avec un écran nous pourront interagir avec l'application permettant de démarrer et d'arrêter un enregistrement.\\[0.2cm]
-
-        Ainsi avec l'application nous pourront avoir une prévisualisation de la capture vidéo.\\[0.2cm]
-    
-        Le but de cette application est de permettre aux biologistes de réaliser des captures vidéo enregistrées directement sur la carte SD de la Raspberry Pi.\\[0.2cm]
-
-        Il sera également possible de visualiser les capture vidéos enregistrées sur la carte SD du Raspberry Pi et si besoin de les récupérer à l'aide d'une clé USB ou un disque dur externe sans problème.\\[0.2cm]
-
-        Voyons maintenant comment faire.
-    \end{flushleft}
+    \section{Choix des technologies}
+    \section{Réalisation de l'application}
+        
+        
