--- a/src/tex/chapter_3.tex
+++ b/src/tex/chapter_3.tex
@@ -4,7 +4,7 @@
 
     % \vspace{0.5cm}
 
-    \section{Présentation de l'aspect Biologie}
+    \section{Présentation de l'aspect biologistes}
     Les \textbf{Gerridés} sont une famille d'insectes de l'ordre des Hémiptères et du sous-ordre des Hétéroptères c'est-à-dire des punaises.
     \begin{figure}[ht]
         \centering
